[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/TileSet/Placeholder.tres" type="TileSet" id=1]
[ext_resource path="res://Script/Tilemaps/WorldSet.gd" type="Script" id=2]
[ext_resource path="res://Script/Tilemaps/SelectedSet.gd" type="Script" id=3]
[ext_resource path="res://Script/Camera2D.gd" type="Script" id=4]
[ext_resource path="res://Script/World.gd" type="Script" id=5]
[ext_resource path="res://Script/Tilemaps/BuildingsSet.gd" type="Script" id=6]
[ext_resource path="res://Script/SelectedGUI/Control.tscn" type="PackedScene" id=7]
[ext_resource path="res://Script/TimeGUI/Control.tscn" type="PackedScene" id=8]
[ext_resource path="res://Script/Menu/Menu.tscn" type="PackedScene" id=9]
[ext_resource path="res://Script/BuildingGUI/Control.tscn" type="PackedScene" id=10]
[ext_resource path="res://Script/CanvasModulate.gd" type="Script" id=11]

[node name="World" type="Node2D"]
script = ExtResource( 5 )

[node name="WorldSet" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -393218, 10, 0, -393217, 10, 0, -458752, 10, 0, -458751, 10, 0, -458750, 10, 0, -458749, 10, 0, -458748, 10, 0, -458747, 10, 0, -327683, 10, 0, -327682, 10, 0, -327681, 10, 0, -393216, 10, 0, -393215, 10, 65536, -393214, 10, 65536, -393213, 10, 0, -393212, 10, 0, -393211, 10, 0, -393210, 10, 0, -393209, 10, 0, -262147, 10, 0, -262146, 10, 0, -262145, 10, 0, -327680, 10, 0, -327679, 10, 65536, -327678, 10, 0, -327677, 10, 65536, -327676, 10, 0, -327675, 10, 0, -327674, 10, 65536, -327673, 10, 0, -327672, 10, 0, -327671, 10, 0, -327670, 10, 0, -196612, 10, 0, -196611, 10, 0, -196610, 10, 65536, -196609, 10, 0, -262144, 10, 65536, -262143, 10, 0, -262142, 10, 0, -262141, 10, 65536, -262140, 10, 0, -262139, 10, 65536, -262138, 10, 0, -262137, 10, 65536, -262136, 10, 65536, -262135, 10, 65536, -262134, 10, 0, -262133, 10, 0, -131077, 10, 0, -131076, 10, 0, -131075, 10, 65536, -131074, 10, 0, -131073, 10, 65536, -196608, 10, 0, -196607, 10, 65536, -196606, 10, 0, -196605, 10, 0, -196604, 10, 65536, -196603, 10, 65536, -196602, 10, 0, -196601, 10, 65536, -196600, 10, 65536, -196599, 10, 0, -196598, 10, 0, -196597, 10, 0, -196596, 10, 0, -65541, 10, 0, -65540, 10, 65536, -65539, 10, 0, -65538, 10, 65536, -65537, 10, 0, -131072, 10, 65536, -131071, 10, 0, -131070, 10, 0, -131069, 10, 65536, -131068, 10, 65536, -131067, 10, 0, -131066, 10, 0, -131065, 10, 0, -131064, 10, 0, -131063, 10, 0, -131062, 10, 65536, -131061, 10, 0, -131060, 10, 0, -5, 10, 0, -4, 10, 0, -3, 10, 0, -2, 10, 0, -1, 10, 0, -65536, 10, 65536, -65535, 10, 65536, -65534, 10, 65536, -65533, 10, 0, -65532, 10, 65536, -65531, 10, 0, -65530, 10, 65536, -65529, 10, 65536, -65528, 10, 0, -65527, 10, 65536, -65526, 10, 65536, -65525, 10, 0, -65524, 10, 0, 65531, 10, 0, 65532, 10, 0, 65533, 10, 65536, 65534, 10, 0, 65535, 10, 65536, 0, 10, 0, 1, 10, 0, 2, 10, 65536, 3, 10, 65536, 4, 10, 0, 5, 10, 0, 6, 10, 65536, 7, 10, 0, 8, 10, 65536, 9, 10, 0, 10, 10, 65536, 11, 10, 0, 12, 10, 0, 131067, 10, 0, 131068, 10, 0, 131069, 10, 0, 131070, 10, 65536, 131071, 10, 65536, 65536, 10, 0, 65537, 10, 65536, 65538, 10, 0, 65539, 10, 0, 65540, 10, 0, 65541, 10, 65536, 65542, 10, 65536, 65543, 10, 0, 65544, 10, 65536, 65545, 10, 0, 65546, 10, 0, 65547, 10, 65536, 65548, 10, 0, 196603, 10, 0, 196604, 10, 65536, 196605, 10, 0, 196606, 10, 65536, 196607, 10, 65536, 131072, 10, 0, 131073, 10, 0, 131074, 10, 0, 131075, 10, 0, 131076, 10, 0, 131077, 10, 65536, 131078, 10, 65536, 131079, 10, 65536, 131080, 10, 0, 131081, 10, 0, 131082, 10, 0, 131083, 10, 0, 131084, 10, 0, 262139, 10, 0, 262140, 10, 65536, 262141, 10, 0, 262142, 10, 0, 262143, 10, 65536, 196608, 10, 0, 196609, 10, 0, 196610, 10, 0, 196611, 10, 65536, 196612, 10, 0, 196613, 10, 65536, 196614, 10, 0, 196615, 10, 0, 196616, 10, 0, 196617, 10, 0, 196618, 10, 65536, 196619, 10, 0, 196620, 10, 0, 327675, 10, 0, 327676, 10, 0, 327677, 10, 0, 327678, 10, 0, 327679, 10, 65536, 262144, 10, 65536, 262145, 10, 65536, 262146, 10, 0, 262147, 10, 65536, 262148, 10, 65536, 262149, 10, 0, 262150, 10, 65536, 262151, 10, 65536, 262152, 10, 0, 262153, 10, 0, 262154, 10, 65536, 262155, 10, 0, 262156, 10, 0, 393211, 10, 0, 393212, 10, 0, 393213, 10, 65536, 393214, 10, 65536, 393215, 10, 65536, 327680, 10, 0, 327681, 10, 0, 327682, 10, 0, 327683, 10, 0, 327684, 10, 0, 327685, 10, 0, 327686, 10, 65536, 327687, 10, 0, 327688, 10, 0, 327689, 10, 0, 327690, 10, 65536, 327691, 10, 0, 327692, 10, 0, 458748, 10, 0, 458749, 10, 0, 458750, 10, 0, 458751, 10, 0, 393216, 10, 0, 393217, 10, 0, 393218, 10, 65536, 393219, 10, 0, 393220, 10, 65536, 393221, 10, 65536, 393222, 10, 65536, 393223, 10, 0, 393224, 10, 65536, 393225, 10, 65536, 393226, 10, 0, 393227, 10, 0, 393228, 10, 0, 524285, 10, 0, 524286, 10, 65536, 524287, 10, 65536, 458752, 10, 65536, 458753, 10, 0, 458754, 10, 0, 458755, 10, 0, 458756, 10, 65536, 458757, 10, 65536, 458758, 10, 0, 458759, 10, 65536, 458760, 10, 65536, 458761, 10, 65536, 458762, 10, 0, 458763, 10, 65536, 458764, 10, 0, 589821, 10, 0, 589822, 10, 0, 589823, 10, 65536, 524288, 10, 65536, 524289, 10, 0, 524290, 10, 65536, 524291, 10, 65536, 524292, 10, 65536, 524293, 10, 0, 524294, 10, 0, 524295, 10, 0, 524296, 10, 65536, 524297, 10, 65536, 524298, 10, 65536, 524299, 10, 65536, 524300, 10, 0, 655358, 10, 0, 655359, 10, 0, 589824, 10, 65536, 589825, 10, 0, 589826, 10, 0, 589827, 10, 0, 589828, 10, 65536, 589829, 10, 0, 589830, 10, 0, 589831, 10, 65536, 589832, 10, 65536, 589833, 10, 0, 589834, 10, 65536, 589835, 10, 0, 589836, 10, 0, 720895, 10, 0, 655360, 10, 0, 655361, 10, 0, 655362, 10, 0, 655363, 10, 65536, 655364, 10, 0, 655365, 10, 0, 655366, 10, 0, 655367, 10, 65536, 655368, 10, 65536, 655369, 10, 0, 655370, 10, 0, 655371, 10, 0, 720897, 10, 0, 720898, 10, 0, 720899, 10, 0, 720900, 10, 0, 720901, 10, 0, 720902, 10, 0, 720903, 10, 0, 720904, 10, 0, 720905, 10, 0, 720906, 10, 0 )
script = ExtResource( 2 )

[node name="SelectedSet" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
format = 1
script = ExtResource( 3 )

[node name="BuildingsSet" type="TileMap" parent="."]
mode = 1
tile_set = ExtResource( 1 )
cell_size = Vector2( 32, 16 )
cell_y_sort = true
format = 1
tile_data = PoolIntArray( -262143, 6, 0, -262142, 6, 0, -262141, 6, 0, -196607, 6, 0, -196606, 4, 0, -196605, 7, 0, -196604, 6, 0, -131071, 6, 0, -131070, 6, 0, -131069, 6, 0, -131068, 6, 0, -65535, 6, 0, -65534, 4, 0, -65533, 6, 0, -65532, 7, 0, 1, 7, 0, 2, 6, 0, 3, 6, 0, 65537, 6, 0, 65538, 4, 0, 65539, 6, 0, 131073, 6, 0, 131074, 6, 0, 131075, 7, 0, 131078, 11, 0, 196609, 6, 0, 196610, 4, 0, 196611, 6, 0, 262145, 7, 0, 262146, 6, 0, 262147, 7, 0 )
script = ExtResource( 6 )

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="SelectedGUI" parent="Camera2D/CanvasLayer" instance=ExtResource( 7 )]
margin_left = 864.846
margin_top = 511.467
margin_right = 866.174
margin_bottom = 511.467

[node name="BuildingGUI" parent="Camera2D/CanvasLayer" instance=ExtResource( 8 )]
anchor_right = 1.0
anchor_bottom = 1.004
margin_left = -1.36875
margin_top = 557.0
margin_right = -933.297
margin_bottom = -2.39996

[node name="Menu" parent="Camera2D/CanvasLayer" instance=ExtResource( 9 )]
margin_left = 384.328
margin_top = 533.959
margin_right = 384.328
margin_bottom = 533.959

[node name="Time" parent="Camera2D/CanvasLayer" instance=ExtResource( 10 )]
margin_left = 929.928
margin_right = 903.216

[node name="CanvasModulate" type="CanvasModulate" parent="."]
script = ExtResource( 11 )
[connection signal="on_tile_hover" from="." to="SelectedSet" method="_on_World_on_tile_hover"]
[connection signal="on_tile_select" from="." to="BuildingsSet" method="_on_World_on_tile_select"]
[connection signal="on_tile_select" from="." to="WorldSet" method="_on_World_on_tile_select"]
[connection signal="on_tile_select" from="." to="SelectedSet" method="_on_World_on_tile_select"]
[connection signal="on_use_building" from="." to="BuildingsSet" method="_on_World_on_use_building"]
[connection signal="update_gui" from="." to="Camera2D/CanvasLayer/SelectedGUI" method="_on_World_update_gui"]
[connection signal="use_building" from="Camera2D/CanvasLayer/Menu" to="." method="_on_Menu_use_building"]
[connection signal="time_passed" from="CanvasModulate" to="Camera2D/CanvasLayer/Time" method="_on_CanvasModulate_time_passed"]
